--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/src/css/iwage.css">
     <link rel="stylesheet" href="/vendor/ext4/resources/css/ext-all.css">
 
-    <script type="text/javascript" src="/vendor/ext4/ext-all.js"></script>
+    <script type="text/javascript" src="/vendor/ext4/ext-all-dev.js"></script>
     <script type="text/javascript" src="/vendor/jquery/jquery-1.7.js"></script>
 
     <script type="text/javascript" src="/dist/iwage.all.js"></script>
